Show past loan details

--- a/app/borrower.html
+++ b/app/borrower.html
@@ -10,7 +10,7 @@
   <h1> Hi! Loan Borrower </h1>
   <div class="container">
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col-sm-12">
         <table id="loan-rows">
           <thead>
             <tr>
@@ -19,11 +19,16 @@
               <th>Amount</th>
               <th>Proposals</th>
               <th>Amount Collected</th>
+              <th>Loan Id</th>
+              <th>Details</th>
             </tr>
           </thead>
+          <tbody>
+            
+          </tbody>
         </table>
       </div>
-      <div class="col-sm-6">
+      <div class="col-sm-12">
         <div class="alert alert-info" id="newloan-form" style="display:none;">
           <h4 class="alert-heading"><b>No Currently Active Loan! Ask for one here.</b></h4>
           <form>
