--- a/app/borrower.html
+++ b/app/borrower.html
@@ -36,7 +36,7 @@
           <h4>Welcome to Crowd Bank</h4>
           <hr class="intro-divider">
           <h5>Your Account Address : <span id="account-number"></span></h5>
-          <h5>Your Account Balance : <span id="account-balance"></span> ethereum</h5>
+          <h5>Your Account Balance : <span id="account-balance"></span> ETH</h5>
           <hr class="intro-divider">
           <h4><b>Your Past Loan Details</b></h4>
           <div class="row">
