--- a/app/lender.html
+++ b/app/lender.html
@@ -41,9 +41,9 @@
           <h4><b>Your List of Proposals</b></h4>
           <div class="row">
             <div class="col-sm-12">
-              <table class="table table-striped">
+              <table class="table table-striped table-hover">
                 <thead>
-                  <tr>
+                  <tr class="info">
                     <th>Lender</th>
                     <th>LoanId</th>
                     <th>Proposal State</th>
@@ -56,9 +56,9 @@
               </table>
             </div>
             <div class="col-sm-12">
-              <table class="table table-striped">
+              <table class="table table-striped table-hover">
                 <thead>
-                  <tr>
+                  <tr class="info">
                     <th>LoanId</th>
                     <th>Borrower</th>
                     <th>Loan State</th>
