--- a/app/borrower.html
+++ b/app/borrower.html
@@ -38,29 +38,11 @@
           <h5>Your Account Address : <span id="account-number"></span></h5>
           <h5>Your Account Balance : <span id="account-balance"></span> ethereum</h5>
           <hr class="intro-divider">
-          <h4><b>Your Past Loan Details</b></h4>
           <div class="row">
+            <!-- New Loan Form : Default Style Hidden -->
             <div class="col-sm-12">
-              <table id="loan-rows" class="table table-striped table-hover">
-                <thead>
-                  <tr class="info">
-                    <th>Loan State</th>
-                    <th>Due Date</th>
-                    <th>Amount</th>
-                    <th>Proposals</th>
-                    <th>Amount Collected</th>
-                    <th>Loan Id</th>
-                    <th>Details</th>
-                  </tr>
-                </thead>
-                <tbody>
-                </tbody>
-              </table>
-            </div>
-
-            <div class="col-sm-12">
-              <div class="alert alert-info" id="newloan-form" style="display:none;">
-                <h4 class="alert-heading"><b>No Currently Active Loan! Ask for one here.</b></h4>
+              <div class="alert alert-danger" id="newloan-form" style="display:none;">
+                <h4 class="alert-heading text-center"><b>No Currently Active Loan! Ask for one here.</b></h4>
                 <form>
                   <div class="form-group">
                     <label for="amount">Amount:</label>
@@ -73,6 +55,27 @@
                   <button type="submit" class="btn btn-default">Ask for Money</button>
                 </form>
               </div>
+            </div>
+
+            <!-- Past Loan Details Table -->
+            <div class="col-sm-12">
+              <h4><b>Your Past Loan Details</b></h4>
+              <table id="loan-rows" class="table table-striped table-hover">
+                <thead>
+                  <tr class="info">
+                    <th>Loan State</th>
+                    <th>Due Date</th>
+                    <th>Amount</th>
+                    <th>Proposals</th>
+                    <th>Amount Collected</th>
+                    <th>Loan Id</th>
+                    <th>Details</th>
+                    <th>Action</th>
+                  </tr>
+                </thead>
+                <tbody>
+                </tbody>
+              </table>
             </div>
           </div>
         </div>
