--- a/app/lender.html
+++ b/app/lender.html
@@ -36,7 +36,7 @@
           <h4>Welcome to Crowd Bank</h4>
           <hr class="intro-divider">
           <h5>Your Account Address : <span id="account-number"></span></h5>
-          <h5>Your Account Balance : <span id="account-balance"></span> ethereum</h5>
+          <h5>Your Account Balance : <span id="account-balance"></span>ETH</h5>
           <hr class="intro-divider">
           <h4><b>Your List of Proposals</b></h4>
           <div class="row">
@@ -44,11 +44,11 @@
               <table class="table table-striped table-hover">
                 <thead>
                   <tr class="info">
-                    <th>Lender</th>
                     <th>LoanId</th>
                     <th>Proposal State</th>
                     <th>Rate</th>
                     <th>Amount</th>
+                    <th>Revoke</th>
                   </tr>
                 </thead>
                 <tbody id="proposal-rows">
