--- a/app/index.html
+++ b/app/index.html
@@ -24,8 +24,8 @@
       <a class="navbar-brand text-white" href="#">
         Crowd Bank
       </a>
-      <a class="navbar-brand navbar-right">
-        Proffer Block Chain Hackathon 2017
+      <a class="navbar-brand">
+        (Proffer Block Chain Hackathon 2017)
       </a>
     </nav>
 
