[v0.1.1] : Add mortgage listing and verification

--- a/app/lender.html
+++ b/app/lender.html
@@ -45,9 +45,12 @@
                 <thead>
                   <tr class="info">
                     <th>LoanId</th>
+                    <th>Amount Asked</th>
+                    <th>Due Date</th>
+                    <th>Mortgage</th>
                     <th>Proposal State</th>
-                    <th>Rate</th>
-                    <th>Amount</th>
+                    <th>Proposed Rate</th>
+                    <th>Proposed Amount</th>
                     <th>Revoke</th>
                   </tr>
                 </thead>
@@ -68,8 +71,9 @@
                     <th>Loan State</th>
                     <th>Due Date</th>
                     <th>Amount</th>
-                    <th>Proposed Amount</th>
-                    <th>Proposed Rate</th>
+                    <th>Mortgage</th>
+                    <th>Proposed ETH</th>
+                    <th>Proposed Rate (%pa)</th>
                     <th>Propose</th>
                   </tr>
                 </thead>
