--- a/app/borrower.html
+++ b/app/borrower.html
@@ -52,10 +52,10 @@
                     <label for="date">Due Date:</label>
                     <input type="date" class="form-control" id="newloan-date" name="date">
                   </div>
-                  <!--<div class="form-group">-->
-                  <!--  <label for="mortgage">Mortgage:</label>-->
-                  <!--  <input type="text" class="form-control" id="newloan-mortgage" name="mortgage" placeholder="Govt Verified Hash of your Mortgage">-->
-                  <!--</div>-->
+                  <div class="form-group">
+                    <label for="mortgage">Your Mortgage Address:</label>
+                    <input type="text" class="form-control" id="newloan-mortgage" name="mortgage" placeholder="Govt Verified Hash of your Mortgage">
+                  </div>
                   <button type="submit" class="btn btn-default">Ask for Money</button>
                 </form>
               </div>
@@ -71,7 +71,7 @@
                     <th>Loan State</th>
                     <th>Due Date</th>
                     <th>Amount Asked</th>
-                    <th>No. of Proposals</th>
+                    <th>Mortgage Given</th>
                     <th>Amount Collected</th>
                     <th>Details</th>
                     <th>Action</th>
