modifies JS files

--- a/app/index.html
+++ b/app/index.html
@@ -24,9 +24,7 @@
       <a class="navbar-brand text-white" href="#">
         Crowd Bank
       </a>
-      <a class="navbar-brand">
-        (Proffer Block Chain Hackathon 2017)
-      </a>
+
     </nav>
 
     <!-- Header -->
@@ -40,13 +38,13 @@
             <li class="list-inline-item">
               <a href="/lender.html" class="btn btn-success btn-lg">
                 <i class="fa fa-y-combinator fa-fw"></i>
-                <span class="network-name">Want to Invest?</span>
+                <span class="network-name">Lender's deck</span>
               </a>
             </li>
             <li class="list-inline-item">
               <a href="/borrower.html" class="btn btn-danger btn-lg">
                 <i class="fa fa-money fa-fw"></i>
-                <span class="network-name">Need Money?</span>
+                <span class="network-name">Borrower's deck</span>
               </a>
             </li>
           </ul>
